css/styles.css
/* ================= RESET STYLES START ================= */
*, *::before, *::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

* {
  margin: 0;
}

ul, ol {
  list-style: none;
}

/* Enable smooth animations for non "Reduced Motion" users for height and width with keywords (auto, min-content etc) */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
	min-height: 100vh;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/* Set shorter line heights on headings and interactive elements */
h1, h2, h3, h4,
button, input, label {
  line-height: 1.1;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}

h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}
/* ================= RESET STYLES END ================= */

/* ================= VARIABLES START ================= */
:root {
  --font-size-base: clamp(1rem, 0.53vw + 0.87rem, 1.2rem);
  --font-size-md: clamp(1.2rem, 0.64vw + 1.04rem, 1.44rem);
  --font-size-xl: clamp(1.73rem, 0.92vw + 1.5rem, 2.07rem);
  --font-size-xxxl: clamp(1.8rem, 2.33vw + 1.25rem, 3rem);
}

/* MATERIAL 3 BASELINE TOKENS */
/* LIGHT THEME (Default) */
:root, .light {
  --md-sys-color-primary: rgb(54 94 157);
  --md-sys-color-on-primary: rgb(255 255 255);
  --md-sys-color-primary-container: rgb(118 156 223);
  --md-sys-color-on-primary-container: rgb(0 50 106);
  --md-sys-color-secondary: rgb(81 95 121);
  --md-sys-color-surface: rgb(249 249 255);
  --md-sys-color-on-surface: rgb(26 28 32);
  --md-sys-color-surface-container: rgb(238 237 243);
  --md-sys-color-outline: rgb(115 119 129);
  --md-sys-color-error: rgb(186 26 26);
}

/* DARK THEME (Automatic switch) */
@media (prefers-color-scheme: dark) {
  :root {
    --md-sys-color-primary: rgb(170 199 255);
    --md-sys-color-on-primary: rgb(0 47 100);
    --md-sys-color-primary-container: rgb(118 156 223);
    --md-sys-color-on-primary-container: rgb(0 50 106);
    --md-sys-color-secondary: rgb(185 199 229);
    --md-sys-color-surface: rgb(18 19 23);
    --md-sys-color-on-surface: rgb(226 226 232);
    --md-sys-color-surface-container: rgb(30 32 36);
    --md-sys-color-outline: rgb(141 144 155);
    --md-sys-color-error: rgb(255 180 171);
  }
}
/* ================= VARIABLES END ================= */

/* ================= BASE STYLES START ================= */
body {
  padding: 1rem;
  max-width: 90rem;       /* Constrain content on large screens (~1440px) */
  margin: auto;
  background-color: var(--md-sys-color-surface);
  color: var(--md-sys-color-on-surface);
  font-family: system-ui, sans-serif;
  font-size: var(--font-size-base);
  transition: background-color 0.3s ease, color 0.3s ease;
}

/* ================= BASE STYLES END ================= */

/* ================= TYPOGRAPHY START ================= */
h1, h2, h3 { 
  color: var(--md-sys-color-primary);
}

.l-header__title {
  font-size: var(--font-size-xxxl);
  font-weight: 800;
  letter-spacing: clamp(-0.03rem, 0.15vw + -0.07rem, 0.05rem);
}

.l-header__subtitle {
  font-size: var(--font-size-xl);
  color: var(--md-sys-color-secondary);
  font-weight: 400;
  line-height: 1.2;
  flex-basis: 100%;
}

.about-section__title,
.weather-section__title,
.l-aside__title {
  font-size: var(--font-size-xl);
  font-weight: 700;
}

.l-aside__zone-name {
  font-size: var(--font-size-md);
  font-weight: 600;
}
/* ================= TYPOGRAPHY END ================= */

/* ================= LAYOUT START ================= */
.l-header {
  background-color: var(--md-sys-color-surface-container);
  border-bottom: 1px solid var(--md-sys-color-outline);
  display: grid;
  grid-template-columns: 1fr 6fr;
  align-items: center;
  padding: 1rem 0.5rem;
}

.l-header__subtitle {
  grid-column: 1 / span 2;
}

.l-header__logo {
  width: 3rem;
}

.l-main {
  padding: 1rem 0.5rem;
}

.about-section {
  margin-bottom: 1rem;
}

.l-aside {
  background-color: var(--md-sys-color-surface-container);
  padding: 1rem 0.5rem;
}

.l-aside__content {
  display: grid;
  grid-template-columns: minmax(10rem, 1fr);
}

.l-aside__title {
  margin-bottom: 0.5rem;
}

.l-aside__zone {
  background-color: var(--md-sys-color-surface);
  border: 1px solid var(--md-sys-color-outline);
  padding: 0.5rem 0.5rem;
}

.l-footer {
  text-align: center;
  padding: 3rem 0;
}

.weather-section__title {
  margin-bottom: 0.5rem;
}

.weather-section__container {
  display: grid;
  grid-template-columns: minmax(10rem, 1fr);
  gap: 1rem;
}

.city-card {
  background-color: var(--md-sys-color-surface-container);
  border: 1px solid var(--md-sys-color-outline);
  border-radius: 1.5rem;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.city-card__temp {
  font-size: var(--font-size-xxxl);
  font-weight: 800;
}
/* ================= LAYOUT END ================= */

/* ================= RESPONSIVENESS START ================= */
/* Tablet devices (sm --> ≥568px) */
@media only screen and (min-width: 35.5em) {
  .l-header__logo {
    width: 5rem;
    grid-row: 1 / span 2;
  }

  .l-header__subtitle {
    grid-column: 2 / span 1;
  }

  .weather-section__container {
    grid-template-columns: minmax(10rem, 1fr) minmax(10rem, 1fr);
  }

  .l-aside__content {
    grid-template-columns: minmax(10rem, 1fr) minmax(10rem, 1fr);
  }
}

/* Medium (laptop) devices (md --> ≥768px) */
@media only screen and (min-width: 48em) {
  .l-header {
    text-align: center;
    padding: 2rem 1.5rem;
  }

  .l-main {
    padding: 2rem 2.5rem;
  }

  .about-section {
    margin-bottom: 2rem;
  }

  .about-section__title {
    margin-bottom: 0.5rem;
  }

  .weather-section__title {
    margin-bottom: 1.5rem;
  }

  .weather-section__container {
    grid-template-columns: minmax(15rem, 1fr) minmax(15rem, 1fr) minmax(15rem, 1fr);
  }

  .city-card {
    padding: 2rem;
  }

  .l-aside {
    padding: 2rem 1.5rem;
  }

  .l-aside__title {
    margin-bottom: 1.5rem;
  }

  .l-aside__content {
    grid-template-columns: minmax(0rem, 1fr) minmax(0rem, 1fr) minmax(0rem, 1fr) minmax(0rem, 1fr);
  }

  .l-aside__zone {
    padding: 1.5rem 1.5rem;
  }
}

/* XLarge devices (xl --> ≥1280px) */
@media only screen and (min-width: 80em) {
  .l-main {
    /* This allows the element's children to appear as if they were direct children of the element's parent */
    display: contents; 
  }

  .l-main-grid {
    display: grid;
    grid-template-columns: minmax(20rem, 3fr) minmax(20rem, 1fr);
    gap: 2rem;
  }

  .about-section {
    grid-column: 1 / span 2;
  }

  .l-aside__content {
    grid-template-columns: minmax(0, 1fr);
  }
}
/* ================= RESPONSIVENESS END ================= */

